[project]
name = "mindiffusion"
version = "0.1.0"
description = "Minimal PyTorch diffusion model examples"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-dotenv",
    "torch",
    "torchvision",
    "tqdm",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
